fixed description bug, overlapping gui

--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
 #info {
 	position: absolute;
 	top: 10px;
-	width: 100%;
+	width: 25%;
 	text-align: center;
 	z-index: 100;
 	display:block;
